Vervang triage door beoordeling in alle content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ClaimKompas — Kifid‑voor beslisondersteuning voor verzekeraars</title>
-  <meta name="description" content="ClaimKompas helpt verzekeraars Kifid-escalaties te voorkomen: triage → precedent → besluit. Zie risico, vergelijkbare uitspraken en next-best-action in één dashboard." />
+  <meta name="description" content="ClaimKompas helpt verzekeraars Kifid-escalaties te voorkomen: beoordeling → precedent → besluit. Zie risico, vergelijkbare uitspraken en next-best-action in één dashboard." />
   <meta name="theme-color" content="#0b0f19" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +41,7 @@
         <div class="dd">
           <button class="ddBtn" aria-expanded="false" aria-controls="dd-features">Features</button>
           <div class="ddPane" id="dd-features" role="menu">
-            <a href="#features" role="menuitem">Triage op escalatierisico</a>
+            <a href="#features" role="menuitem">Beoordeling op escalatierisico</a>
             <a href="#features" role="menuitem">Precedent Finder</a>
             <a href="#features" role="menuitem">Scenario’s pay/settle/fight</a>
             <a href="#features" role="menuitem">Audit‑trail & export</a>
@@ -150,7 +150,7 @@
             <div class="screenTop">
               <div class="screenLeft">
                 <span class="mini" aria-hidden="true"></span>
-                <span class="screenTitle">Triage dashboard</span>
+                <span class="screenTitle">Beoordeling dashboard</span>
               </div>
               <div class="screenRight">
                 <span class="tag">Explainable</span>
@@ -221,7 +221,7 @@
           <div class="hintCard">
             <div class="hintTitle">Wat je ziet</div>
             <div class="hintItems">
-              <div class="hi"><span class="hDot"></span><span>Risico‑score (triage)</span></div>
+              <div class="hi"><span class="hDot"></span><span>Risico‑score (beoordeling)</span></div>
               <div class="hi"><span class="hDot"></span><span>Precedent‑cases (Kifid)</span></div>
               <div class="hi"><span class="hDot"></span><span>Advies + export</span></div>
             </div>
@@ -293,7 +293,7 @@
             <div class="routeCard featured">
               <div class="rk">ClaimKompas‑route</div>
               <div class="steps">
-                <div class="st"><span class="snum">1</span><span class="stxt">Triage op risico</span></div>
+                <div class="st"><span class="snum">1</span><span class="stxt">Beoordeling op risico</span></div>
                 <div class="st"><span class="snum">2</span><span class="stxt">Precedenten erbij</span></div>
                 <div class="st"><span class="snum">3</span><span class="stxt">Besluit + rapport</span></div>
               </div>
@@ -315,7 +315,7 @@
         <div class="grid4 reveal" aria-label="Features">
           <article class="fCard">
             <div class="fIcon" aria-hidden="true">🔎</div>
-            <div class="fTitle">Triage</div>
+            <div class="fTitle">Beoordeling</div>
             <div class="fSub">Markeer “hoog risico” dossiers automatisch.</div>
           </article>
           <article class="fCard">
@@ -347,13 +347,13 @@
 
         <div class="tour reveal">
           <div class="tablist" role="tablist" aria-label="Product tabs">
-            <button class="tab active" role="tab" aria-selected="true" aria-controls="p-triage" id="t-triage">Triage</button>
+            <button class="tab active" role="tab" aria-selected="true" aria-controls="p-beoordeling" id="t-beoordeling">Beoordeling</button>
             <button class="tab" role="tab" aria-selected="false" aria-controls="p-dossier" id="t-dossier">Dossier</button>
             <button class="tab" role="tab" aria-selected="false" aria-controls="p-rapport" id="t-rapport">Rapport</button>
           </div>
 
           <div class="panes">
-            <section class="pane active" role="tabpanel" id="p-triage" aria-labelledby="t-triage">
+            <section class="pane active" role="tabpanel" id="p-beoordeling" aria-labelledby="t-beoordeling">
               <div class="ui">
                 <div class="uiLeft">
                   <div class="uiTitle">Inbox</div>
@@ -505,7 +505,7 @@
               <div class="pPrice">€— <span>/ maand</span></div>
             </div>
             <div class="pList">
-              <div class="pl">Triage + precedent‑view</div>
+              <div class="pl">Beoordeling + precedent‑view</div>
               <div class="pl">Rapport templates</div>
               <div class="pl">1 team</div>
             </div>
@@ -584,7 +584,7 @@
           </div>
           <h2>Laat ons het tonen, niet uitleggen.</h2>
           <p>
-            In 30 minuten: triage inbox → dossier view → export rapport.
+            In 30 minuten: beoordeling inbox → dossier view → export rapport.
             Gericht op claims, legal en compliance.
           </p>
 
@@ -606,7 +606,7 @@
             <span class="tag dark">Live walkthrough</span>
           </div>
           <div class="ccList">
-            <div class="cc"><span class="tick" aria-hidden="true"></span><span>Triage op escalatie‑risico</span></div>
+            <div class="cc"><span class="tick" aria-hidden="true"></span><span>Beoordeling op escalatie‑risico</span></div>
             <div class="cc"><span class="tick" aria-hidden="true"></span><span>Precedent‑cases erbij</span></div>
             <div class="cc"><span class="tick" aria-hidden="true"></span><span>Next‑best‑action</span></div>
             <div class="cc"><span class="tick" aria-hidden="true"></span><span>Rapport + audit‑trail</span></div>
