--- a/functionaliteiten.html
+++ b/functionaliteiten.html
@@ -40,7 +40,7 @@
 
       <div class="listGrid reveal">
         <section class="listCard">
-          <h2>Triage</h2>
+          <h2>Beoordeling</h2>
           <ul>
             <li>Escalatie‑risico score per dossier (demo)</li>
             <li>Sorteren/filters: hoog/middel/laag</li>
